[package]
name = "s3sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "s3sync"
path = "src/lib.rs"

[[bin]]
name = "s3sync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
aws-types = "0.55"
chrono = "0.4"
dirs = "5.0"
eframe = "0.17"
egui = "0.17"
env_logger = "0.9"
futures = "0.3"
glob = "0.3"
keyring = "1.2"
log = "0.4"
native-dialog = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.28", features = ["full"] }
walkdir = "2.3"

[dev-dependencies]
tempfile = "3.3"
mockall = "0.11"

[build-dependencies]
winres = "0.1.12"
